[gd_scene load_steps=12 format=2]

[ext_resource path="res://_resources/character_bodys/jaden.png" type="Texture2D" id=1]
[ext_resource path="res://_resources/tournament/dialogue_box.png" type="Texture2D" id=2]
[ext_resource path="res://_resources/fonts/BankGothic Md BT.ttf" type="FontFile" id=3]
[ext_resource path="res://_scripts/characters_dialogs.gd" type="Script" id=4]
[ext_resource path="res://_resources/tournament/dialogue_button_next.png" type="Texture2D" id=5]

[sub_resource type="FontFile" id=1]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=2]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "button_press",
"speed": 6.0
} ]

[node name="dialogue_scene" type="Node2D"]
script = ExtResource( 4 )

[node name="character_body" type="Sprite2D" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="body_tween" type="Tween" parent="character_body"]

[node name="dialogue_box" type="Sprite2D" parent="."]
position = Vector2( 640, 600 )
texture = ExtResource( 2 )

[node name="dialogue_button" type="Button" parent="dialogue_box"]
offset_left = -640.0
offset_top = -120.0
offset_right = 640.0
offset_bottom = 120.0
focus_mode = 0
focus_mode = 0
flat = true

[node name="character_name" type="Label" parent="dialogue_box"]
offset_left = -632.0
offset_top = -117.0
offset_right = -245.0
offset_bottom = -72.0
pivot_offset = Vector2( -604, -243 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 1 )
text = "Editor Holder"

[node name="dialog_text" type="Label" parent="dialogue_box"]
offset_left = -624.0
offset_top = -50.0
offset_right = 624.0
offset_bottom = 103.0
theme_override_fonts/font = SubResource( 2 )
text = "This is a big placeholder dialogue. I will try to demonstrate all digits in more than 1 line. There goes the numbers 0 1 2 3 4 5 6 7 8 9. Also special ones for position purposes ç ã õ à á ê ! ? @ % $ *"
autowrap = true

[node name="typewriter_tween" type="Tween" parent="dialogue_box/dialog_text"]

[node name="button_animation" type="AnimatedSprite2D" parent="dialogue_box"]
visible = false
position = Vector2( 602, 83 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 6 )
animation = "button_press"
playing = true

[connection signal="button_up" from="dialogue_box/dialogue_button" to="." method="_on_dialogue_button_button_up"]
